Review count on tab, new PHO"

--- a/app/views/info.html
+++ b/app/views/info.html
@@ -29,6 +29,7 @@
       <li class="col-md-6"><a href="http://wellhealth.health.nz/">Well Health Trust</a></li>
       <li class="col-md-6"><a href="http://www.westcoastpho.org.nz/">West Coast PHO</a></li>
       <li class="col-md-6"><a href="http://www.wboppho.org.nz/">Western Bay of Plenty PHO</a></li>
+      <li class="col-md-6"><a href="http://www.korowai.co.nz/">Te Korowai</a></li>
     </ul>
   </div>
   <div class="row">
