--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,6 +7,18 @@
   z-index: 1;
 }
 
+.animate-show {
+  opacity: 1;
+}
+
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
+  transition: all linear 80ms;
+}
+
+.animate-show.ng-hide {
+  opacity: 0;
+}
+
 select:disabled {
  -webkit-appearance: none;
   -moz-appearance: none;
@@ -65,8 +77,8 @@ input[type=number] {
 /* Fade hiding animation in ng-repeat*/
 .repeat-animate.ng-enter
 { 
- -webkit-transition: opacity cubic-bezier(0.250, 0.250, 0.750, 0.750) 0.3s;
-  transition: opacity cubic-bezier(0.250, 0.250, 0.750, 0.750) 0.3s;
+ -webkit-transition: opacity cubic-bezier(0.250, 0.250, 0.750, 0.750) 0.1s;
+  transition: opacity cubic-bezier(0.250, 0.250, 0.750, 0.750) 0.1s;
   opacity: 0;
 } 
 
