--- a/app/views/result.html
+++ b/app/views/result.html
@@ -37,9 +37,9 @@
 						<leaflet id="leaflet_map" paths="paths" height="300px" width="100%" layers="layers"></leaflet>
 					</div>
 					<h4 class="text-left" ng-show="noPractices">No practices found near you.</h4>
-					<h4 class="text-left" ng-show="christchurch">Limited fee data available for Christchurch. For a more complete list of Christchurch practices visit <a href="http://www.pegasus.health.nz/gp-locator" target="_blank">Pegasus Health</a></h4>
+					<h3 class="text-left no-up-down-padding" ng-show="christchurch"><small>Limited fee data available for Christchurch. For a more complete list of Christchurch practices visit <a href="http://www.pegasus.health.nz/gp-locator" target="_blank">Pegasus Health</a></small></h3>
 				</tab>
-				<tab heading="Reviews ({{thisPractice.google.reviewCount || 0}})" ng-show="thisPractice.google" deselect="reloadMap()" class="animate-show">
+				<tab heading="Reviews ({{thisPractice.google.reviewCount || 0}})" ng-show="thisPractice.name" deselect="reloadMap()" class="animate-show">
 					<div style="padding: 0px 15px 15px 15px;">
 						<div class="row">
 							<div class="col-lg-12">
@@ -75,6 +75,6 @@
 				</tab>
 			</tabset>
 		</div>
-		<h3 class="no-up-down-padding" style="padding-right: 15px; float: right;"><small><a ng-show="map.active" ng-click="reportModal()" href="">Incorrect information or missing practices?<a></small></h3>
+		<h3 class="no-up-down-padding" style="padding-right: 15px; float: right;"><small><a ng-show="map.active && !christchurch" ng-click="reportModal()" href="">Incorrect information or missing practices?<a></small></h3>
 	</div>
 </div>
