Fixed some things

--- a/app/styles-conditional/autocomplete-big.css
+++ b/app/styles-conditional/autocomplete-big.css
@@ -1,6 +1,6 @@
 /* Google Autocomplete stuff */
 .pac-container {
-  width: 40% !important;
+  width: 40%;
 }
 .pac-item {
   height: 50px !important;
