--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,8 +2,6 @@
 
 .appLink {
   position: absolute;
-  right: 0px;
-  top: 5px;
   z-index: 1;
 }
 
@@ -221,11 +219,24 @@ input[type=number] {
   text-align: center;
   clear: both;
 }
+.fb-like{
+  position: absolute !important;
+  z-index: 1000;
+}
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
     max-width: 730px;
+  }
+  .fb-like{
+    top: 15px;
+    left: 65px;
+  }
+
+  .appLink {
+    right: 0px;
+    top: 5px;
   }
 }
 
@@ -246,9 +257,9 @@ input[type=number] {
 
 /* View transition stuff */
 .view-animate.ng-enter, .view-animate.ng-leave {
-  transition: transform 500ms ease;
-  -moz-transition: transform 500ms ease;
-  -webkit-transition: transform 500ms ease;
+  transition: transform 500ms ease 1s;
+  -moz-transition: transform 500ms ease 1s;
+  -webkit-transition: transform 500ms ease 1s;
   -webkit-backface-visibility: hidden;
   -webkit-perspective: 1000;
   display:block;
@@ -308,9 +319,6 @@ input[type=number] {
  .navbar-nav {
     margin-left: 3px;
   }
-  .fb-like{
-    display: none !important;
-  }
 }
 
 /*
@@ -318,6 +326,20 @@ input[type=number] {
  * --------------------------------------------------
  */
 @media screen and (max-width: 767px) {
+  .appLink {
+    right: -15px;
+    bottom: 15px;
+  }
+
+  .appLink img {
+    height: 100%;
+    width: 80%;
+  }
+
+  .fb-like{
+    margin-left: 10px !important;
+    bottom: 15px;
+  }
   .row-offcanvas {
     position: relative;
     -webkit-transform-style: preserve-3d;
@@ -357,14 +379,15 @@ input[type=number] {
   }
 }
 
+
 /* Font size and autocomplete size on really small screens*/
 @media screen and (max-width: 481px) {
-  .appLink {
-    top: 65px;
+  .centre-content {
+    width: 60% !important;
   }
   .pac-container {
-      width: 100% !important;
-      left: 0px !important;
+    width: 100% !important;
+    left: 0px !important;
   }
   .navbar-brand-centred {
     font-size: 28px;
@@ -374,15 +397,15 @@ input[type=number] {
     margin-left: -80px !important;
   }
   h3 {
-    font-size: 20px;
+    font-size: 18px;
   }
+
+  ::-webkit-input-placeholder { font-size: 85%; }
+  ::-moz-placeholder { font-size: 85%; }
+  :-ms-input-placeholder { font-size: 85%; }
+  input:-moz-placeholder { font-size: 85%; }
 
   h4 {
     font-size: 16px;
   }
-}
-
-.fb-like{
-  margin-top: 10px !important;
-  margin-left: 30px !important;
 }
