--- a/app/views/result.html
+++ b/app/views/result.html
@@ -8,7 +8,7 @@
 					</small></h3>
 				</div>
 			</div>
-			<div class="list-group scrollable nopadding animate-expand-down" id="practice-list" auto-scroll>
+			<div class="list-group nopadding animate-expand-down" id="practice-list" auto-scroll>
 				<a href="" class="list-group-item"  ng-class="{'active': isActive($index)}" ng-click="navPractice($index, true)" ng-repeat="practice in practices track by $index">
 					<div class="row">
 						<div class="col-md-3 col-xs-3">
@@ -40,7 +40,7 @@
 					<h3 class="text-left no-up-down-padding" ng-show="christchurch"><small>Limited fee data available for Christchurch. For a more complete list of Christchurch practices visit <a href="http://www.pegasus.health.nz/gp-locator" target="_blank">Pegasus Health</a></small></h3>
 				</tab>
 				<tab heading="Reviews ({{thisPractice.google.reviewCount || 0}})" ng-show="thisPractice.name" deselect="reloadMap()" class="animate-show">
-					<div style="padding: 0px 15px 15px 15px;">
+					<div id="reviews" style="padding: 0px 15px 15px 15px; overflow-y: auto;">
 						<div class="row">
 							<div class="col-lg-12">
 								<h3>{{thisPractice.name}} <small>{{thisPractice.pho}}</small></h3>
