--- a/app/views/result.html
+++ b/app/views/result.html
@@ -39,7 +39,7 @@
 					<h4 class="text-left" ng-show="noPractices">No practices found near you.</h4>
 					<h3 class="text-left no-up-down-padding" ng-show="christchurch"><small>Limited fee data available for Christchurch. For a more complete list of Christchurch practices visit <a href="http://www.pegasus.health.nz/gp-locator" target="_blank">Pegasus Health</a></small></h3>
 				</tab>
-				<tab heading="Reviews ({{thisPractice.google.reviewCount || 0}})" ng-show="thisPractice.name" deselect="reloadMap()" class="animate-show">
+				<tab heading="Reviews {{thisPractice.reviewCount}}" ng-show="thisPractice.name" deselect="reloadMap()" class="animate-show">
 					<div id="reviews" style="padding: 0px 15px 15px 15px; overflow-y: auto;">
 						<div class="row">
 							<div class="col-lg-12">
