--- a/app/views/result.html
+++ b/app/views/result.html
@@ -31,15 +31,15 @@
 			<p class="pull-left visible-xs" style="padding-top: 15px; margin-bottom: 0px;">
             	<a type="button" class="btn btn-default btn-lg" ng-click="toggleSidebar()"><span ng-class="(sidebar==1) ? 'glyphicon-menu-right' : 'glyphicon-menu-left'" class="glyphicon"></span></a>
           	</p>
-			<tabset style="padding-top: 15px;">
-				<tab heading="Map" active="map.active">
+			<uib-tabset style="padding-top: 15px;">
+				<uib-tab heading="Map" active="map.active">
 					<div class="animate-expand-down" id="map_canvas" ng-hide="noPractices" ng-controller="MapCtrl">
 						<leaflet id="leaflet_map" paths="paths" height="300px" width="100%" layers="layers"></leaflet>
 					</div>
 					<h4 class="text-left" ng-show="noPractices">No practices found near you.</h4>
 					<h3 class="text-left no-up-down-padding" ng-show="christchurch"><small>Limited fee data available for Christchurch. For a more complete list of Christchurch practices visit <a href="http://www.pegasus.health.nz/gp-locator" target="_blank">Pegasus Health</a></small></h3>
-				</tab>
-				<tab heading="Reviews {{thisPractice.reviewCount}}" ng-show="thisPractice.name" deselect="reloadMap()" class="animate-show">
+				</uib-tab>
+				<uib-tab heading="Reviews {{thisPractice.reviewCount}}" ng-show="thisPractice.name" deselect="reloadMap()" class="animate-show">
 					<div id="reviews" style="padding: 0px 15px 15px 15px; overflow-y: auto;">
 						<div class="row">
 							<div class="col-lg-12">
@@ -72,8 +72,8 @@
 							</div>
 						</div>
 					</div>
-				</tab>
-			</tabset>
+				</uib-tab>
+			</uib-tabset>
 		</div>
 		<h3 class="no-up-down-padding" style="padding-right: 15px; float: right;"><small><a ng-show="map.active && !christchurch" ng-click="reportModal()" href="">Incorrect information or missing practices?<a></small></h3>
 	</div>
