Fix search issue on older iOS devices

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,7 @@
     <div class="form-group" ng-class="{ 'has-error': form.address.$invalid && form.address.$dirty }" show-errors='{showSuccess: true}'>
       <div class="col-md-8 nopadding">
         <label class="sr-only" for="address">Address</label>
-        <input name="address" ng-model-options="{ debounce: 250 }" type="text" class="form-control input-lg" ng-model="autocomplete" options="options" details="details" placeholder="{{addressPlaceholder}}" address-validation required ng-autocomplete></input>
+        <input name="address" ng-model-options="{ debounce: 250 }" type="text" class="form-control input-lg" ng-model="autocomplete" options="options" details="details" placeholder="{{addressPlaceholder}}" address-validation disable-tap required ng-autocomplete></input>
       </div>
     </div>
     <div class="form-group" ng-class="{ 'has-error': form.age.$invalid  && form.age.$dirty}" show-errors='{showSuccess: true}'>
