Stop doing the stupid autocompelte thing, start taking analytics on searches, better meta description

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -411,3 +411,20 @@ input[type=number] {
     font-size: 16px;
   }
 }
+
+
+/* Google Autocomplete stuff */
+.big-autocomplete .pac-container {
+  width: 40% !important;
+}
+.big-autocomplete .pac-item {
+  height: 50px !important;
+  font-size: 16px !important;
+}
+.big-autocomplete .pac-item-query {
+  font-size: 18px !important;
+}
+
+.small-autocomplete .pac-container {
+  width: 24em !important;
+}
