Change wording in a bunch of places, make some things a bit more readable

--- a/app/views/result.html
+++ b/app/views/result.html
@@ -25,7 +25,7 @@
 					</div>
 				</a>
 			</div>
-			<h3 class="no-up-down-padding" style="padding-left: 15px;"><small>Fees apply to enrolled patients only.</small></h3>
+			<h3 class="no-up-down-padding" style="padding-left: 15px;"><small>Fees are for enrolled patients. <a ng-click="openDialog()" href="">More</a></small></h3>
 		</div>
 		<div class="col-sm-8 col-md-8 col-lg-9 no-left-right-padding" >
 			<p class="pull-left visible-xs" style="padding-top: 15px; margin-bottom: 0px;">
