--- a/app/views/info.html
+++ b/app/views/info.html
@@ -1,48 +1,25 @@
 <div class="container-fluid">
   <div class="row">
-    <h4>Searching over 800 practices from the following PHOs</h4>
-    <ul class="list-unstyled" id='pho-list'>
-      <li class="col-md-6"><a href="http://www.alliancehealth.org.nz/">Alliance Health Plus</a></li>
-      <li class="col-md-6"><a href="http://www.aucklandpho.co.nz/">Auckland PHO</a></li>
-      <li class="col-md-6"><a href="http://www.centralpho.org.nz/">Central PHO</a></li>
-      <li class="col-md-6"><a href="http://www.chchpho.org.nz/">Christchurch PHO</a></li>
-      <li class="col-md-6"><a href="http://www.compasshealth.org.nz/">Compass Health</a></li>
-      <li class="col-md-6"><a href="http://www.ebpho.org.nz/">Eastern Bay PHO</a></li>
-      <li class="col-md-6"><a href="http://www.easthealth.co.nz/">East Health Trust</a></li>
-      <li class="col-md-6"><a href="http://www.haurakipho.org.nz/">Hauraki PHO</a></li>
-      <li class="col-md-6"><a href="http://www.healthhb.co.nz/">Health Hawkes Bay</a></li>
-      <li class="col-md-6"><a href="http://www.nbph.org.nz/">Malborough PHO</a></li>
-      <li class="col-md-6"><a href="https://www.midlandshn.health.nz/">Midlands Health Network</a></li>
-      <li class="col-md-6"><a href="http://www.hauoracoalition.maori.nz/">National Hauora Coalition</a></li>
-      <li class="col-md-6"><a href="http://www.manaiapho.co.nz/">Manaia Health PHO</a></li>
-      <li class="col-md-6"><a href="http://www.nbph.org.nz/">Nelson Bays PHO</a></li>
-      <li class="col-md-6"><a href="http://www.teawakairangihealth.org.nz/">Te Awakairangi Health Network</a></li>
-      <li class="col-md-6"><a href="http://www.procare.co.nz/">Procare</a></li>
-      <li class="col-md-6"><a href="http://www.raphs.org.nz/">Rotorua Area PHS</a></li>
-      <li class="col-md-6"><a href="http://www.rcpho.org.nz/">Rural Canterbury PHO</a></li>
-      <li class="col-md-6"><a href="http://www.southernpho.health.nz/">Southern PHO</a></li>
-      <li class="col-md-6"><a href="http://www.scdhb.health.nz/">South Canterbury DHB</a></li>
-      <li class="col-md-6"><a href="http://www.nph.org.nz/">Ngati Porou Hauora</a></li>
-      <li class="col-md-6"><a href="http://www.nmopho.org.nz/">Nga Mataapuna Oranga</a></li>
-      <li class="col-md-6"><a href="http://www.tttpho.co.nz/">Te Tai Tokerau PHO</a></li>
-      <li class="col-md-6"><a href="http://www.wrpho.org.nz/">Whanganui Regional PHO</a></li>
-      <li class="col-md-6"><a href="http://wellhealth.health.nz/">Well Health Trust</a></li>
-      <li class="col-md-6"><a href="http://www.westcoastpho.org.nz/">West Coast PHO</a></li>
-      <li class="col-md-6"><a href="http://www.wboppho.org.nz/">Western Bay of Plenty PHO</a></li>
-      <li class="col-md-6"><a href="http://www.korowai.co.nz/">Te Korowai</a></li>
-    </ul>
+    <h3>What is this?</h3>
+    <p>DoctorPricer is a labour of love created to address the problem of finding a GP which fits your budget.</p>
+    <p>It's completely non-profit to the point that it's negative profit. It's not funded by or afilliated with any government department.</p>
   </div>
   <div class="row">
-    <h4>Important Information</h4>
+    <h3>Where's all the data coming from?</h3>
+    <p>In most cases the data comes directly from the websites of PHOs.</p>
+    <p>You can see the sources used and freshness of the data <a href="https://scrapers.doctorpricer.co.nz" title="DoctorPricer Scrapers">here</a>.</p>
+  </div>
+  <div class="row">
+    <h3>Important Information</h3>
     <ul>
-      <li>Fees are for a standard consult with a GP during standard hours and applicable only for enrolled patients.</li>
-      <li>Some practices may have enrolment restrictions.</li>
-      <li>Only practices which are currently taking patients will be displayed.</li>
+      <li>Fees only apply if you're enrolled in the practice's PHO <a title="More info from the Ministry of Health" href="https://www.health.govt.nz/our-work/primary-health-care/about-primary-health-organisations/enrolment-primary-health-organisation"><small>More</small></a></li>
+      <li>Fees are for a standard consult with a GP during standard hours</li>
+      <li>Some practices may have enrolment restrictions</li>
+      <li>Only practices which are currently taking patients are displayed</li>
     </ul>
   </div>
   <div class="row">
-    <h4>Email/Bitcoin</h4>
+    <h3>Contact</h3>
     <p><a href="mailto:doctorpricernz@gmail.com">doctorpricernz@gmail.com</a></p>
-    <p><a href="bitcoin:1HDaJzYkmkKyi8FRf5yX1j18dSRxGawAaD">1HDaJzYkmkKyi8FRf5yX1j18dSRxGawAaD</a></p>
   </div>
 </div>
