Change from scrapers to stats

--- a/app/views/info.html
+++ b/app/views/info.html
@@ -7,7 +7,7 @@
   <div class="row">
     <h3>Where's all the data coming from?</h3>
     <p>In most cases the data comes directly from the websites of PHOs.</p>
-    <p>You can see the sources used and freshness of the data at <a href="https://scrapers.doctorpricer.co.nz" title="DoctorPricer Scrapers">scrapers.doctorpricer.co.nz</a>.</p>
+    <p>You can see the sources used and freshness of the data at <a href="https://stats.doctorpricer.co.nz" title="DoctorPricer Stats">stats.doctorpricer.co.nz</a>.</p>
   </div>
   <div class="row">
     <h3>Important Information</h3>
