Add donate button

--- a/app/views/info.html
+++ b/app/views/info.html
@@ -2,7 +2,7 @@
   <div class="row">
     <h3>What is this?</h3>
     <p>DoctorPricer is a labour of love created to address the problem of finding a GP which fits your budget.</p>
-    <p>It's completely non-profit to the point that it's negative profit. It's not funded by or afilliated with any government department.</p>
+    <p>It's completely non-profit to the point that it's negative profit. It's not funded by or affiliated with any government department.</p>
   </div>
   <div class="row">
     <h3>Where's all the data coming from?</h3>
@@ -17,6 +17,16 @@
       <li>Some practices may have enrolment restrictions</li>
       <li>Only practices which are currently taking patients are displayed</li>
     </ul>
+  </div>
+  <div class="row">
+    <h3>Donations</h3>
+    <p>Help keep DoctorPricer running and free of ads.</p>
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="EXKPZ7P8DE9EL">
+      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+      <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+    </form>      
   </div>
   <div class="row">
     <h3>Contact</h3>
