--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="centre-content">
-  <!-- <h3>Compare fees from over 800 NZ practices.</h2>
+  <h3>Compare fees from over 800 NZ practices.</h2>
   <form name="form" ng-submit="next()" class="form" novalidate>
     <div class="form-group" ng-class="{ 'has-error': form.address.$invalid && form.address.$dirty }" show-errors='{showSuccess: true}'>
       <div class="col-md-8 nopadding">
@@ -17,6 +17,6 @@
     <loading-button btn-size="btn-lg"></loading-button>
     </div>
   </form>
-  <h4>{{error}}</h4> -->
-  <h1>DoctorPricer is currently offline for maintenance. Check back in a couple of hours.</h1>
+  <h4>{{error}}</h4>
+  <!-- <h1>DoctorPricer is currently offline for maintenance. Check back in a couple of hours.</h1> -->
 </div>
