--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -57,9 +57,9 @@ a, button {
   padding: 0;
 }
 
-/* Move the modal up a bit */
-.ngdialog {
-  top: -100px !important;
+/* Style the modal */
+.modal-content {
+  padding: 20px;
 }
 
 /* Get rid of ugly number input spinner in chrome and ff*/
@@ -122,7 +122,7 @@ input[type=number] {
   color: white !important;
 }
 .navbar-default a:hover{
-  color: #FFB800 !important;
+  color: #c1ffdc !important;
 }
 .navbar-default a:active{
   color: white !important;
