--- a/app/views/report.html
+++ b/app/views/report.html
@@ -1,18 +1,32 @@
 <div class="container-fluid">
   <form ng-submit="submitForm()">
     <div class="form-group">
-      <label for="inputEmail">Email address (optional but helpful)</label>
-      <input ng-model="form.email" type="email" class="form-control" id="inputEmail" placeholder="Email">
+      <div class="row">
+        <label for="inputEmail">Email address (optional but helpful)</label>
+      </div>
+      <div class="row">
+        <input ng-model="form.email" type="email" class="form-control" id="inputEmail" placeholder="Email">
+      </div>
     </div>
     <div class="form-group">
-      <label for="inputEmail">Which practice displays incorrect information?</label>
-      <input ng-model="form.which" type="text" class="form-control" id="inputText" placeholder="Practice Name" required>
+      <div class="row">
+        <label for="inputEmail">Which practice displays incorrect information?</label>
+      </div>
+      <div class="row">
+        <input ng-model="form.which" type="text" class="form-control" id="inputText" placeholder="Practice Name" required>
+      </div>
     </div>
     <div class="form-group">
-      <label for="inputWhich">What's incorrect?</label>
-      <textarea ng-model="form.text" id="inputWhich" cols="40" rows="5" placeholder="Describe the problem..."></textarea>
+      <div class="row">
+        <label for="inputWhich">What's incorrect?</label>
+      </div>
+      <div class="row">
+        <textarea ng-model="form.text" id="inputWhich" cols="40" rows="5" placeholder="Describe the problem..."></textarea>
+      </div>
     </div>
-    <button ng-hide="sending" type="submit" class="btn btn-default">Submit</button>
-    <h4>{{status}}</h4>
+    <div class="row">
+      <button ng-hide="sending" type="submit" class="btn btn-default">Submit</button>
+      <h4>{{status}}</h4>
+    </div>
   </form>
 </div>
