--- a/app/views/report.html
+++ b/app/views/report.html
@@ -1,4 +1,8 @@
 <div class="container-fluid">
-  <h3>Report an issue</h3>
-  <script type="text/javascript">(function a(d, w, u) {var h = d.getElementsByTagName("head")[0];var s = d.createElement("script");s.type = "text/javascript";s.src = "https://portal.form.io/lib/seamless/seamless.parent.min.js";s.onload = function b() {var f = d.getElementById("formio-form-5b6e4b8d492219d7ffc36f99");if (!f || (typeof w.seamless === u)) {return setTimeout(b, 100);}w.seamless(f, {fallback:false}).receive(function(d, e) {});};h.appendChild(s);})(document, window);</script><iframe id="formio-form-5b6e4b8d492219d7ffc36f99" style="width:100%;border:none;" height="600px" src="https://formview.io/#/arzmbofopxwetkq/reportaproblem?iframe=1&header=0"></iframe>
+  <div class="modal-header row">
+    <h2 class="modal-title">Report an issue<span class="fa fa-window-close" aria-hidden="true" style="float: right;" ng-click="$close(result)"></span></h2>
+  </div>
+  <div class="modal-body">
+    <script type="text/javascript">(function a(d, w, u) {var h = d.getElementsByTagName("head")[0];var s = d.createElement("script");s.type = "text/javascript";s.src = "https://portal.form.io/lib/seamless/seamless.parent.min.js";s.onload = function b() {var f = d.getElementById("formio-form-5b6e4b8d492219d7ffc36f99");if (!f || (typeof w.seamless === u)) {return setTimeout(b, 100);}w.seamless(f, {fallback:false}).receive(function(d, e) {});};h.appendChild(s);})(document, window);</script><iframe id="formio-form-5b6e4b8d492219d7ffc36f99" style="width:100%;border:none;" height="600px" src="https://formview.io/#/arzmbofopxwetkq/reportaproblem?iframe=1&header=0"></iframe>
+  </div>
 </div>
