--- a/app/views/result.html
+++ b/app/views/result.html
@@ -33,7 +33,7 @@
           	</p>
 			<uib-tabset>
 				<uib-tab heading="Map" active="map.active">
-					<div id="map_canvas" ng-hide="noPractices" ng-controller="MapCtrl">
+					<div id="map_canvas" ng-hide="noPractices" ng-controller="MapCtrl" ng-swipe-right="cancelSwipe($event)" ng-swipe-left="cancelSwipe($event)">
 						<leaflet id="leaflet_map" height="300px" width="100%" paths="paths" tiles="tiles"></leaflet>
 					</div>
 					<h4 class="text-left" ng-show="noPractices">No practices found near you.</h4>
