--- a/app/views/info.html
+++ b/app/views/info.html
@@ -20,6 +20,7 @@
         <li>Fees are for a standard consult with a GP during standard hours</li>
         <li>Some practices may have enrolment restrictions</li>
         <li>Only practices which are currently taking patients are displayed</li>
+        <li>Pegasus PHO are the only PHO in the country who don't share fee data, so unfortunately only a fraction of the practices in Christchurch are available</li>
       </ul>
     </div>
     <div class="row">
