--- a/app/views/info.html
+++ b/app/views/info.html
@@ -6,7 +6,7 @@
     <div class="row">
       <h3>What is this?</h3>
       <p>DoctorPricer is a labour of love created to address the problem of finding a GP which fits your budget.</p>
-      <p>It's completely non-profit to the point that it's negative profit. It's not funded by or affiliated with any government department.</p>
+      <p>It's not funded by or affiliated with any government department. The only funding source is one small ad on the frontpage to help cover hosting costs.</p>
     </div>
     <div class="row">
       <h3>Where's all the data coming from?</h3>
@@ -25,7 +25,7 @@
     </div>
     <div class="row">
       <h3>Donations</h3>
-      <p>Help keep DoctorPricer running and free of ads.</p>
+      <p>Help keep DoctorPricer running.</p>
       <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
         <input type="hidden" name="cmd" value="_s-xclick">
         <input type="hidden" name="hosted_button_id" value="EXKPZ7P8DE9EL">
