--- a/app/views/main.html
+++ b/app/views/main.html
@@ -20,3 +20,17 @@
   <h3>{{error}}</h3>
   <!-- <h1>DoctorPricer is currently offline for maintenance. Check back in a couple of hours.</h1> -->
 </div>
+
+<div class="stupid-ad">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- DoctorPricer Front -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-2527917281752489"
+       data-ad-slot="1395256542"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
