Change ad placement so it's a bit more aggressive and do centering via flexbox instead of weird shit

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -102,14 +102,36 @@ input[type=number] {
 
 
 /* Container which centers content vertically and horizontally*/
+.centre-container {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
 .centre-content {
   text-align: center;
-  transform: translate(-50%, -50%);
-  top: 45%;
-  left: 50%;
-  position: absolute;
-  margin: 0 auto;
   width: 40%;
+  padding-bottom: 100px;
+}
+
+.main-container {
+  height: 100%;
+  padding-top: 50px;
+  box-sizing: border-box;
+}
+
+.stupid-ad {
+  position: absolute;
+  bottom: 40px;
+  height: 20vh;
+  width: 60%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Can be applied to any class to remove all padding*/
@@ -132,7 +154,9 @@ input[type=number] {
 .navbar-default {
   font-size: 18px;
   margin-bottom: 0px;
-  z-index: 0;
+  z-index: 1;
+  position: absolute;
+  width: 100%;
 }
 .navbar-default a:visited{
   color: white !important;
@@ -263,6 +287,10 @@ input[type=number] {
   -o-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
   transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
 }
+.navbar-nav {
+  padding: 0;
+  margin: 0;
+}
 .navbar-form.ng-hide {
   opacity: 0;
   line-height: 0;
@@ -270,6 +298,9 @@ input[type=number] {
 }
 
 /* View transition stuff */
+.view-animate {
+  height: 100%;
+}
 .view-animate.ng-enter, .view-animate.ng-leave {
   transition: transform 500ms ease;
   -moz-transition: transform 500ms ease;
@@ -398,32 +429,13 @@ input[type=number] {
   cursor: pointer;
 }
 
-.stupid-ad {
-  position: absolute;
-  width: 100%;
-  bottom: 2px;
-  left: 0px;
-}
-
-.stupid-ad .adsbygoogle {
-  margin: 40px auto 40px auto;
-  display: flex;
-  width: 50vw;
-  height: 8vh;
-}
-
 /* Font size and autocomplete size on really small screens*/
 @media screen and (max-width: 420px) {
 
-  .stupid-ad .adsbygoogle {
-    width: 93vw;
-    transform: none;
-    margin: auto auto 50px auto;
-  }
-
-  .centre-content {
+  .centre-content, .stupid-ad {
     width: 80% !important;
   }
+
   .modal-body {
     max-height: 80vh;
     overflow: auto;
