--- a/app/views/result.html
+++ b/app/views/result.html
@@ -79,7 +79,7 @@
 	</div>
 </div>
 
-<div class="container-fluid no-left-right-padding" ng-show="loading">
+<div class="centre-container" ng-show="loading">
 	<div class="searching centre-content">
 		<h3><i class="fa fa-spinner fa-spin fa-lg"></i> Finding nearby practices...</h3>
 	</div>
