--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,17 +1,17 @@
-<div class="centre-container">
+<div class="centre-container" ng-hide="results_loading">
   <div class="centre-content">
     <h3 class="tagline">Compare fees from over 800 NZ practices.</h3>
     <form name="form" ng-submit="next()" class="form" novalidate>
       <div class="form-group" ng-class="{ 'has-error': form.address.$invalid && form.address.$dirty, 'has-success': !form.address.$invalid  && form.address.$dirty }" show-errors='{showSuccess: true}'>
         <div class="col-md-8 nopadding">
           <label class="sr-only" for="address">Address</label>
-          <input name="address" id="addressInput" ng-model-options="{ debounce: 250 }" type="text" class="form-control input-lg" ng-model="autocomplete" options="options" details="details" placeholder="{{addressPlaceholder}}" address-validation disable-tap required ng-autocomplete></input>
+          <input name="address" id="addressInput" ng-model-options="{ debounce: 250 }" type="text" class="form-control input-lg" ng-model="autocomplete" options="options" details="details" placeholder="{{addressPlaceholder}}" address-validation disable-tap required ng-autocomplete/>
         </div>
       </div>
       <div class="form-group" ng-class="{ 'has-error': form.age.$invalid  && form.age.$dirty, 'has-success': !form.age.$invalid  && form.age.$dirty }" show-errors='{showSuccess: true}'>
         <div class="col-md-2 nopadding">
           <label class="sr-only" for="age">Age</label>
-          <input name="age" min="0" type="number" class="form-control input-lg" ng-model="age" placeholder="Age" required></input>
+          <input name="age" min="0" type="number" class="form-control input-lg" ng-model="age" placeholder="Age" required/>
         </div>
       </div>
       <div class="col-md-2 nopadding">
@@ -21,5 +21,10 @@
     <h3>{{error}}</h3>
     <!-- <h1>DoctorPricer is currently offline for maintenance. Check back in a couple of hours.</h1> -->
   </div>
+</div>
+<div class="centre-container" ng-show="results_loading" ng-cloak>
+	<div class="searching centre-content">
+		<h3><i class="fa fa-spinner fa-spin fa-lg"></i> Finding nearby practices...</h3>
+	</div>
 </div>
 <stupid-ad></stupid-ad>
