--- a/app/views/result.html
+++ b/app/views/result.html
@@ -1,10 +1,10 @@
-<div ng-hide="loading" class="container-fluid no-left-right-padding" id="result-page" ng-swipe-left="toggleSidebar()" ng-swipe-right="toggleSidebar()">
+<div ng-hide="results_loading" class="container-fluid no-left-right-padding" id="result-page" ng-swipe-left="toggleSidebar()" ng-swipe-right="toggleSidebar()">
 	<div class="row row-offcanvas row-offcanvas-left"  ng-class="{'active': sidebar}">
 		<div class="col-sm-4 col-md-4 col-lg-3 no-left-right-padding sidebar-offcanvas" id="sidebar" >
 			<div class="row">
 				<div class="col-md-12">
 					<h3 style="margin-top: 0px; padding-left:2px;"><small>Found {{practices.length}} practices within
-						<select ng-disabled="radiuses.practices.length === 0" ng-model="selectedRadius" ng-init="selectedRadius = radiuses[0]" ng-options="r.name for r in radiuses" ng-change="changeRadius(selectedRadius.key)"></select>
+						<select ng-disabled="radiuses.practices.length === 0" ng-model="selectedRadius" ng-init="selectedRadius = '0'" ng-options="key as value.name for (key, value) in radiuses" ng-change="changeRadius(selectedRadius)"></select>
 					</small></h3>
 					<h3 ng-show="christchurch"><small><i class="fa fa-exclamation-triangle"></i> Limited fee data available for Christchurch. For a more complete list of Christchurch practices visit <a href="http://www.pegasus.health.nz/gp-locator" target="_blank">Pegasus Health</a></small></h3>
 				</div>
@@ -34,10 +34,10 @@
           	</p>
 			<uib-tabset>
 				<uib-tab heading="Map" active="map.active">
-					<div id="map_canvas" ng-hide="noPractices" ng-controller="MapCtrl" ng-swipe-right="cancelSwipe($event)" ng-swipe-left="cancelSwipe($event)">
+					<div id="map_canvas" ng-hide="noPractices()" ng-controller="MapCtrl" ng-swipe-right="cancelSwipe($event)" ng-swipe-left="cancelSwipe($event)">
 						<leaflet id="leaflet_map" height="300px" width="100%" paths="paths" tiles="tiles"></leaflet>
 					</div>
-					<h4 class="text-left" ng-show="noPractices">No practices found near you.</h4>
+					<h4 class="text-left" ng-show="noPractices()">No practices found near you.</h4>
 				</uib-tab>
 				<uib-tab heading="Reviews {{thisPractice.reviewCount}}" ng-show="thisPractice.name" deselect="reloadMap()" class="animate-show">
 					<div id="reviews" style="padding: 0px 15px 15px 15px; overflow-y: auto;">
@@ -78,8 +78,7 @@
 		<h3 class="no-up-down-padding" style="padding-right: 15px; float: right;"><small><a ng-show="map.active && !christchurch" ng-click="reportModal()" href="">Incorrect information or missing practices?<a></small></h3>
 	</div>
 </div>
-
-<div class="centre-container" ng-show="loading">
+<div class="centre-container" ng-show="results_loading" ng-cloak>
 	<div class="searching centre-content">
 		<h3><i class="fa fa-spinner fa-spin fa-lg"></i> Finding nearby practices...</h3>
 	</div>
